# 2DPhysicsEngine

./: CMakeLists.txt  README.md  app
include/collision/: AABB.hpp  Collision.hpp  Partioning.hpp  Partitioning.hpp
include/core/: RigidBody.hpp  Transform.hpp  Vector2.hpp  World.hpp
include/math/: Math.hpp
include/visuals/: Visuals.hpp
src/: RigidBody.cpp  collision.cpp  main.cpp  visuals.cpp  world.cpp
